[package]
name = "myth_wukong_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.31.4"
winapi = { version = "0.3", features = [
  "handleapi",
  "processthreadsapi",
  "memoryapi",
  "errhandlingapi",
  "minwindef",
  "winnt",
  "libloaderapi",
  "psapi",
] }
